# stellar-keystone

./: .eslintrc.cjs  .gitignore  .prettierrc  ARCHITECTURE.md  DEVELOPMENT.md  ENV.example  INDEXER.md  LICENSE  README.md  SCF-PITCH.md  SECURITY.md  pnpm-lock.yaml  rustfmt.toml
cli/: README.md  package-lock.json  package.json  tsconfig.json
cli/src/: index.ts
examples/: README.md
examples/secure_vault/: Cargo.toml  README.md
examples/secure_vault/src/: lib.rs
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: contracts-list.tsx  create-role-modal.tsx  current-contract-card.tsx  dashboard-metrics.tsx  empty-contract-state.tsx  (+8 more)
indexer/: README.md  package-lock.json  package.json
js-sdk/: README.md  jest.config.cjs  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
rbac/: Cargo.toml  README.md
rbac/src/: errors.rs  events.rs  lib.rs  storage.rs
rbac/test_snapshots/tests/: test_cleanup_expired_role.1.json  test_create_role.1.json  test_default_admin_role_exists_after_init.1.json  test_get_role_expiry.1.json  test_grant_and_has_role.1.json  test_has_role_is_pure_no_side_effects.1.json  test_initialize.1.json  test_invalid_expiry.1.json  test_require_role_failure.1.json  test_require_role_success.1.json  test_revoke_role.1.json  test_revoke_role_nonexistent_role.1.json  test_role_expiry.1.json  test_self_admin_rejected.1.json  test_set_role_admin.1.json  test_set_role_admin_to_nonexistent.1.json
scripts/: README.md  cleanup.sh  demo.sh  demo.ts
(+22 files in other folders)
