[package]
name = "stellar-keystone-rbac"
version = "1.0.0"
edition = "2021"
description = "Production-grade RBAC for Stellar/Soroban"
license = "MIT"
authors = ["Stellar Keystone Contributors"]
repository = "https://github.com/stellar-keystone/stellar-keystone"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
# Soroban SDK - using latest stable version (v25.0.0, released Jan 2026)
# Documentation: https://docs.rs/soroban-sdk
soroban-sdk = "25.0.0"

[dev-dependencies]
soroban-sdk = { version = "25.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true