[package]
name = "stellar-keystone-secure-vault"
version = "1.0.0"
edition = "2021"
description = "Example vault contract demonstrating RBAC composition"
license = "MIT"
authors = ["Stellar Keystone Contributors"]

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "25.0.0"

[dev-dependencies]
soroban-sdk = { version = "25.0.0", features = ["testutils"] }
# Reference to RBAC contract for cross-contract calls
stellar-keystone-rbac = { path = "../../rbac" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true